crates/hecaton-core/tests/snapshots/plan_golden__one_agent_hash_changed.snap
---
source: crates/hecaton-core/tests/plan_golden.rs
expression: "go(Some(&after), Keep::default(), &st, &running(&before))"
---
stop payments/backend/bob
ensure-crew payments/backend
materialize payments/backend/bob
start payments/backend/bob c04d2996
