crates/hecaton-core/tests/snapshots/plan_golden__stopped_agent_resumed.snap
---
source: crates/hecaton-core/tests/plan_golden.rs
expression: "go(Some(&f), Keep::default(), &[], &st, &obs)"
---
ensure-crew payments/backend
materialize payments/backend/bob
start payments/backend/bob 89cf4262
